Attempted fix at a slight layout issue

--- a/css/philsci.css
+++ b/css/philsci.css
@@ -592,7 +592,7 @@ iframe
 .references>li,
 .archive_list>li
 {
-	overflow: auto;
+	/*overflow: auto;*/
 	padding: 5px;
 }
 
